# strd_modeling

./: .gitignore  Cargo.toml  README.md
data/: milkyway-zone.csv
src/: graph.rs  main.rs  tia_price.rs
